--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 
 :root {
-    --bg-body: hsl(200, 92%, 15%);
+    --bg-body: hsl(210, 100%, 15%);
     --bg-contact: hsl(220, 15%, 43%);
-    --accent: hsl(210, 50%, 40%);
+    --accent: hsl(210, 100%, 60%);
     --text1: hsl(0, 0%, 100%);
     --text2: hsl(0, 0%, 85%);
     --invalid: hsl(7, 100%, 68%);
@@ -39,7 +39,15 @@ body {
 }
 
 a:hover {
-    color: var(--accent)
+    color:var(--accent)
+}
+
+.header__social {
+    display: inline-block;
+}
+
+.header__social:hover > svg > path {
+    fill: var(--accent);
 }
 
 .wrapper {
