--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --bg-body: hsl(210, 100%, 15%);
-    --bg-contact: hsl(220, 15%, 43%);
+    --bg-body2: hsl(220, 15%, 43%);
     --accent: hsl(210, 100%, 60%);
     --text1: hsl(0, 0%, 100%);
     --text2: hsl(0, 0%, 85%);
@@ -48,7 +48,7 @@ body {
   color: var(--text1);
   font-size: var(--fs-18);
   line-height: 1.56;
-  padding-bottom: 25rem;
+  padding-bottom: 0rem;
 }
 
 .bg-less-dark {
