--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ a.underline,
 button {
   display: inline-block;
   padding-bottom: 0.625rem;
-  margin-right: 1rem;
   font-size: 1rem;
   line-height: 1.625;
   letter-spacing: 0.143em;
@@ -257,6 +256,10 @@ svg {
   text-align: center;
   margin-block-start: 335px;
 }
+
+.hero__resume {
+    margin-left: 30px; 
+  }
 
 .hero__headline {
   margin-block-end: 24px;
